--- a/vagrant_provisioning/Vagrantfile
+++ b/vagrant_provisioning/Vagrantfile
@@ -32,13 +32,13 @@ Vagrant.configure(2) do |config|
 	#run bootstrap script
 	config.vm.provision "shell", path: "bootstrap.sh"
 
-	config.vm.define "server" do |server|
-      server.vm.box = BOX_BASE
-      server.vm.hostname = "#{SRV_NAME}"
-      server.vm.network "public_network", ip: "#{SRV_IP}"
+	config.vm.define "elksrv" do |elksrv|
+      elksrv.vm.box = BOX_BASE
+      elksrv.vm.hostname = "#{SRV_NAME}"
+      elksrv.vm.network "public_network", ip: "#{SRV_IP}"
 
 	  #provision resources to server
-	  server.vm.provider "virtualbox" do |vb|
+	  elksrv.vm.provider "virtualbox" do |vb|
         vb.name = "elksrv"
         vb.memory = 2048
         vb.cpus = 2
