--- a/vagrant_provisioning/Vagrantfile
+++ b/vagrant_provisioning/Vagrantfile
@@ -9,7 +9,7 @@ Vagrant.configure(2) do |config|
 
   #HOST_PORT = "2222" # which host-port forward to guest-port
   #GUEST_PORT = "22" # which guest-port will be forward from host-port
-  BOX_BASE = "centos7-1908" # Vagrant base box to use
+  BOX_BASE = "box.centos7" # Vagrant base box to use
   SRV_IP = "192.168.16.110" # server ip address
   SRV_NAME = "elksrv.testlab.local" # server hostname
   CLI_IP = "192.168.16.120" # client ip address
@@ -21,6 +21,9 @@ Vagrant.configure(2) do |config|
 	config.ssh.insert_key = false
     config.ssh.private_key_path = ['~/.vagrant.d/insecure_private_key', '~/.ssh/id_rsa']
     config.vm.provision "file", source: "~/.ssh/id_rsa.pub", destination: "~/.ssh/authorized_keys"
+
+    #disable default /vagrant share
+	config.vm.synced_folder ".", "/vagrant", disabled: true
 
 	#If install VirtualBox Guest Additions set auto_update to "TRUE" or running command "vagrant vbguest --do install"
 	#must install ==> vagrant plugin install vagrant-vbguest
@@ -53,7 +56,7 @@ Vagrant.configure(2) do |config|
 	  #provision resources to client
 	  client.vm.provider "virtualbox" do |vb|
         vb.name = "client"
-        vb.memory = 1024
+        vb.memory = 512
         vb.cpus = 1
       end
 	end
